--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,8 +18,21 @@ jobs:
       - name: Setup MSBuild Path
         uses: microsoft/setup-msbuild@6fb02220983dee41ce7ae257b6f4d8f9bf5ed4ce
 
+      - name: Install vcpkg and curl
+        run: |
+            git clone https://github.com/microsoft/vcpkg.git
+            .\vcpkg\bootstrap-vcpkg.bat
+
+      - name: Install libcurl
+        run: |
+            .\vcpkg\vcpkg.exe install curl[core,ssl] --triplet x86-windows-static
+
+      - name: Integrate vcpkg with MSBuild
+        run: |
+            .\vcpkg\vcpkg.exe integrate install
+
       - name: Build DLL
-        run: msbuild vSMR.sln /p:Configuration=Release /p:Platform='win32'
+        run: msbuild vSMR.sln /p:Configuration=Release /p:Platform='Win32' /p:VcpkgTriplet=x86-windows-static /m
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
