Fix: Escape char correctly

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,8 +37,9 @@ jobs:
         if: github.ref_type == 'tag'
         run: |
           $tag = $env:GITHUB_REF -replace 'refs/tags/', ''
-          (Get-Content -Path "vSMR\SMRPlugin.hpp") -replace '#define MY_PLUGIN_VERSION.*', "#define MY_PLUGIN_VERSION   \"$tag\"" | Set-Content -Path "vSMR\SMRPlugin.hpp"
-
+          (Get-Content -Path "vSMR\SMRPlugin.hpp") -replace '#define MY_PLUGIN_VERSION.*', "#define MY_PLUGIN_VERSION   `"$tag`"" | Set-Content -Path "vSMR\SMRPlugin.hpp"
+        shell: pwsh
+        
       - name: Build DLL
         run: msbuild vSMR.sln /p:Configuration=Release /p:Platform='Win32' /p:VcpkgTriplet=x86-windows-static /m
 
